--- a/experimental/task12/index.html
+++ b/experimental/task12/index.html
@@ -18,36 +18,64 @@
         <div class="main-content">
             <div class="filter">
                 <div id="priority">
-                    <div class="filter-item"><i class="icon-circle bg-red"></i>高优</div>
-                    <div class="filter-item"><i class="icon-circle bg-yellow"></i>中优</div>
-                    <div class="filter-item"><i class="icon-circle bg-green"></i>低优</div>
+                    <div class="filter-item">
+                        <i class="icon-circle bg-red"></i>
+                        高优
+                    </div>
+                    <div class="filter-item">
+                        <i class="icon-circle bg-yellow"></i>
+                        中优
+                    </div>
+                    <div class="filter-item">
+                        <i class="icon-circle bg-green"></i>
+                        低优
+                    </div>
                 </div>
                 <div id="progress">
-                    <div class="filter-item"><i class="icon-triangle"></i>进行中</div>
-                    <div class="filter-item"><i class="icon-"></i>待办</div>
-                    <div class="filter-item"><i class="icon-"></i>已完成</div>
+                    <div class="filter-item">
+                        <i class="icon-triangle"></i>
+                        进行中
+                    </div>
+                    <div class="filter-item">
+                        <i class="icon-pause"></i>
+                        待办
+                    </div>
+                    <div class="filter-item">
+                        <i class="icon-rectangle"></i>
+                        已完成
+                    </div>
                 </div>
             </div>
-            <div class="content">
+            <div class="content-list">
                 <div class="content-item">
-                    <i class="content-icon"></i>
-                    <div class="content-item">TODO：</div>
+                    <div class="content-icon">
+                        <i class="icon-triangle bd-left-red"></i>
+                    </div>
+                    <div class="content-paragraph">Some Text about Task,Some Text about Task,Some Text about Task</div>
                 </div>
                 <div class="content-item">
-                    <i class="content-icon"></i>
-                    <div class="content-item">TODO：</div>
+                    <div class="content-icon">
+                        <i class="icon-pause bd-left-yellow"></i>
+                    </div>
+                    <div class="content-paragraph">Some Text about Task,Some Text about Task,Some Text about Task</div>
                 </div>
                 <div class="content-item">
-                    <i class="content-icon"></i>
-                    <div class="content-item">TODO：</div>
+                    <div class="content-icon">
+                        <i class="icon-rectangle bg-green"></i>
+                    </div>
+                    <div class="content-paragraph">Some Text about Task,Some Text about Task,Some Text about Task</div>
                 </div>
                 <div class="content-item">
-                    <i class="content-icon"></i>
-                    <div class="content-item">TODO：</div>
+                    <div class="content-icon">
+                        <i class="icon-triangle bd-left-red"></i>
+                    </div>
+                    <div class="content-paragraph">Some Text about Task,Some Text about Task,Some Text about Task</div>
                 </div>
-                <div class="content-list">
-                    <i class="content-icon"></i>
-                    <div class="content-item">TODO：</div>
+                <div class="content-item">
+                    <div class="content-icon">
+                        <i class="icon-triangle bd-left-red"></i>
+                    </div>
+                    <div class="content-paragraph">Some Text about Task,Some Text about Task,Some Text about Task</div>
                 </div>
             </div>
         </div>
