add: touch event listener

--- a/experimental/task12/index.html
+++ b/experimental/task12/index.html
@@ -52,6 +52,15 @@
                         <i class="icon-triangle bd-left-red"></i>
                     </div>
                     <div class="content-paragraph">Some Text about Task,Some Text about Task,Some Text about Task</div>
+                    <div class="content-operation content-operation-left">
+                        <div class="content-button">编辑</div>
+                        <div class="content-button">删除</div>
+                    </div>
+                    <div class="content-operation content-operation-right">
+                        <div class="content-button">已完成</div>
+                        <div class="content-button">待办</div>
+                        <div class="content-button">进行中</div>
+                    </div>
                 </div>
                 <div class="content-item">
                     <div class="content-icon">
